--- a/css/kissboard.css
+++ b/css/kissboard.css
@@ -4,22 +4,25 @@ html {
   position: relative;
   min-height: 100%;
 }
+
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
   padding: 60px 15px 0;
 }
+
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 60px;
+  /* Vertically center the text there */
   background-color: #f5f5f5;
 }
 
-.footer > .container {
+.footer>.container {
   padding-right: 15px;
   padding-left: 15px;
 }
@@ -39,8 +42,22 @@ code {
   background-color: #eef;
 }
 
-#board-player-01 .pcolor-bg {background-color: green;}
-#board-player-02 .pcolor-bg {background-color: red;}
-#board-player-03 .pcolor-bg {background-color: blue;}
-#board-player-04 .pcolor-bg {background-color: yellow;}
-#board-player-05 .pcolor-bg {background-color: purple;}
+#board-player-01 .pcolor-bg {
+  background-color: green;
+}
+
+#board-player-02 .pcolor-bg {
+  background-color: red;
+}
+
+#board-player-03 .pcolor-bg {
+  background-color: blue;
+}
+
+#board-player-04 .pcolor-bg {
+  background-color: yellow;
+}
+
+#board-player-05 .pcolor-bg {
+  background-color: purple;
+}
