--- a/games/romani/gamestyle.css
+++ b/games/romani/gamestyle.css
@@ -120,6 +120,14 @@
   height: 28px;
 }
 
+.mainboard .player-command {
+  display: none;
+}
+.playerboard .board-command {
+  display: none;
+}
+
+
 /*icons*/
 .food {
   background-color: green;
