--- a/games/romani/gamestyle.css
+++ b/games/romani/gamestyle.css
@@ -36,7 +36,7 @@
 }
 
 .deck.empty .card, .deck-discard.empty .card {
-  background-color: #eee !important;
+  background-color: #aaa !important;
 }
 
 .deck.empty .card *, .deck-discard.empty .card * {
@@ -62,6 +62,7 @@
   height: 28px;
   max-height: 28px;
   vertical-align: center;
+  background-color: red !important;
 }
 
 .card-building {
@@ -73,6 +74,7 @@
   max-height: 200px !important;
   overflow: hidden;
   padding: 6px 12px;
+  border: 3px solid #715512;
 }
 
 .card-building .card-title {
@@ -108,6 +110,7 @@
   max-height: 200px !important;
   overflow: hidden;
   padding: 6px 12px;
+  border: 3px solid #777;
 }
 
 .card-god .card-title {
@@ -115,7 +118,7 @@
   height: 28px;
 }
 
-.card-god .effect {
+.card-god .card-text {
   text-align: center;
   height: 28px;
 }
@@ -256,4 +259,9 @@
 
 .threat::after {
   content: "\2694";
+}
+
+.point::after {
+ content: "\2605";
+ color: gold;
 }
