--- a/games/romani/template/playerboard.html
+++ b/games/romani/template/playerboard.html
@@ -3,8 +3,9 @@
     <h4 class="board-title pcolor-bg">Player board</h4>
     <button type="button" class="btn btn-primary btn-sm" onclick="kissboard.command('c_construct_temple', 'current_player', '${uid}')">Construire un temple</button>
   </div>
-  <div class="hand hand-buildings row" data-slots="3"></div>
-  <div class="hand hand-gods row" data-slots="1">
+  <div class="row">
+    <div class="hand hand-buildings col-9 row" data-slots="3"></div>
+    <div class="hand hand-gods col-3 row" data-slots="1"></div>
   </div>
 
 </article>
